Fix: Dark mode issue fixed

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,3 +8,61 @@
 
 /* Shadcn UI */
 @import "shadcn.ui";
+
+/* REACT SELECT */
+.dropdown__control {
+  border: 1px solid #dbdfe9 !important;
+  border-radius: 0.375em !important;
+  min-height: 2.5rem !important;
+}
+
+.react-select.dark .dropdown__control {
+  border: 1px solid #363848 !important;
+  background-color: #1f212a !important;
+}
+
+.dropdown__control .dropdown__value-container .dropdown__placeholder {
+  font-size: 13px;
+  color: rgba(75, 86, 117, 0.6);
+  font-family: "Inter", sans-serif !important;
+  font-weight: 500;
+}
+
+.react-select.dark
+  .dropdown__control
+  .dropdown__value-container
+  .dropdown__placeholder {
+  font-size: 13px;
+  color: rgba(255, 255, 255, 0.3);
+  font-family: "Inter", sans-serif !important;
+  font-weight: 500;
+}
+
+.dropdown__control .dropdown__value-container {
+  padding: 2px 10px;
+}
+
+.dropdown__control .dropdown__indicators .dropdown__indicator-separator {
+  display: none;
+}
+
+.dropdown__menu .dropdown__menu-list .dropdown__option {
+  font-weight: 500;
+  font-size: 14px;
+  color: black;
+}
+
+.react-select.dark .dropdown__menu {
+  background-color: #1f212a;
+}
+
+.react-select.dark .dropdown__menu .dropdown__menu-list .dropdown__option {
+  color: white;
+}
+
+.react-select.dark
+  .dropdown__menu
+  .dropdown__menu-list
+  .dropdown__option--is-focused {
+  background-color: rgba(255, 255, 255, 0.1);
+}
